--- a/3.Models/models.Rmd
+++ b/3.Models/models.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "PMEs Fintech&Sustainability in Triveneto Area"
+title: "SMEs Fintech&Sustainability in Triveneto Area"
 subtitle: "Model and Hypotesis testing"
 author: "Elisa Nardini"
 date: "2024-02-02"
